# private-gpt

./: .env.example  .gitignore  .python-version  AUTHORS.md  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  artifacthub-repo.yml  docker-compose.yaml  index.yaml
.github/: dependabot.yml
.github/workflows/: pipeline.yaml
cicd/helm/: .gitignore  Makefile
cicd/helm/private-gpt/: .gitignore  Chart.yaml  values.yaml
cicd/terraform/: .terraform.lock.hcl  .tfvars.example.json  Makefile  main.tf  outputs.tf  provider.tf  variables.tf
src/: docker-compose.dev.yaml
src/conversation-api/: .gitignore  Dockerfile  Makefile  devcontainer.json  main.py  requirements.txt  utils.py
src/conversation-api/ai/: contentsafety.py  openai.py
src/conversation-api/data/: prompts.csv
src/conversation-api/helpers/: azure_app_insights.py  func.py  logging.py  oidc.py
src/conversation-api/models/: conversation.py  memory.py  message.py  prompt.py  search.py  usage.py  user.py
src/conversation-api/persistence/: cache.py  cosmos.py  icache.py  isearch.py  istore.py  istream.py  qdrant.py  redis.py
src/conversation-ui/: .env.development  .env.production  .gitignore  Dockerfile  Makefile  index.html  package-lock.json  package.json  vite.config.js
src/conversation-ui/conf/: default.conf.template
src/conversation-ui/src/: App.jsx  Auth.jsx  Button.jsx  Conversation.jsx  Conversations.jsx  Dropdown.jsx  Header.jsx  Loader.jsx  Message.jsx  (+17 more)
src/conversation-ui/src-tauri/: Cargo.toml  tauri.conf.json
src/conversation-ui/src-tauri/icons/: icon.icns
test/helm/: values.yaml
(+23 files in other folders)
