[package]
authors = ["Clémence Lesné <clemence@lesne.pro>"]
default-run = "private-gpt"
description = "Private GPT is a local version of Chat GPT, using Azure OpenAI."
edition = "2021"
license = "Apache-2.0"
name = "private-gpt"
repository = "https://github.com/clemlesne/private-gpt"
rust-version = "1.70"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.4.0", features = [ "window-unmaximize", "window-maximize", "window-start-dragging", "clipboard-write-text", "notification-all"] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled. If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes. DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

# # Build but activate debug features
# [profile.release.package.wry]
# debug = true
# debug-assertions = true
